--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,10 @@ li {
   background-color: #2f303a;
   padding-top: 200px;
   padding-bottom: 200px;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('.././images/banner.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 .solutions {
   font-family: "Roboto", sans-serif;
