corecciones tarea cuatro

--- a/css/styles.css
+++ b/css/styles.css
@@ -280,15 +280,15 @@ h4 {
 }
 
 .service:nth-child(1) {
-  background-image: url("../images/img1.jpg");
+  background-image: url("../images/app-desk.jpg");
 }
 
 .service:nth-child(2) {
-  background-image: url(".././images/img2.jpg");
+  background-image: url(".././images/app-desk.jpg");
 }
 
 .service:nth-child(3) {
-  background-image: url(".././images/img3.jpg");
+  background-image: url(".././images/app-design.jpg");
 }
 
 .service > h3 {
@@ -512,10 +512,13 @@ a:hover {
   border: 1px solid #eeeeee;
   background-color: #ffffff;
   padding-bottom: 20px;
+  
+}
+
+.sections:hover{
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
     0px 1px 1px rgba(0, 0, 0, 0.12);
 }
-
 .thedescriptions {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -595,3 +598,6 @@ footer>.container {
   justify-content: flex-start;
   align-items: baseline;
   gap: 70px;
+}
+
+
